namespace MonsterTradingCardGame.API.Server.DTOs;

public class LoginData
{
    public required string Username { get; init; }
    public required string Password { get; init; }
}